fix: work on task log viewer

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "chai-spies": "1.1.0",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
+    "clipboard": "2.0.11",
     "codecov": "3.8.3",
     "codelyzer": "6.0.2",
     "conventional-changelog-cli": "^5.0.0",
@@ -107,6 +108,7 @@
     "express": "4.17.3",
     "fs-extra": "8.1.0",
     "got": "version-11",
+    "highlight.js": "^11.10.0",
     "jasmine-core": "^5.2.0",
     "js-yaml": "4.1.0",
     "karma": "^6.4.4",
@@ -128,7 +130,7 @@
     "nyc": "~15.1.0",
     "perfect-scrollbar": "1.5.1",
     "pg": "8.6.0",
-    "prismjs": "1.23.0",
+    "prismjs": "1.29.0",
     "redis": "~3.1.2",
     "routing-controllers": "0.9.0",
     "rxjs": "~7.5.0",
