refactor: cause allgemein update + new redis

--- a/deployments/testing/docker-compose.local.yml
+++ b/deployments/testing/docker-compose.local.yml
@@ -6,14 +6,14 @@ networks:
 services:
 
   redis:
-    image: redis:5
+    image: redis:7
     ports:
       - 127.0.0.1:6379:6379
     networks:
       - txs_base_net
 
   redis2:
-    image: redis:5
+    image: redis:7
     ports:
       - 127.0.0.1:6380:6379
     networks:
@@ -70,7 +70,7 @@ services:
     image: mysql:5
     ports:
       - 127.0.0.1:3306:3306
-    command: --sql_mode="ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+    command:  --sql_mode="ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
     environment:
       MYSQL_DATABASE: txsbase
       MYSQL_USER: txsbase
@@ -78,6 +78,10 @@ services:
       MYSQL_PASSWORD: txsbase
     networks:
       - txs_base_net
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
 
 
   ldap:
