--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,18 +1,18 @@
 {
   "name": "app",
-  "version": "12.0.0",
+  "version": "13.0.0",
   "devDependencies": {
-    "@typexs/base": "2.3.0-dev.0",
-    "@typexs/base-ng": "12.3.0-dev.1",
-    "@typexs/storage-ng": "12.3.0-dev.1",
-    "@typexs/search-ng": "12.3.0-dev.1",
-    "@typexs/storage": "2.3.0-dev.0",
-    "@typexs/forms-ng": "12.3.0-dev.1",
-    "@typexs/forms": "2.3.0-dev.0",
-    "@typexs/entity": "2.3.0-dev.0",
-    "@typexs/entity-ng": "12.3.0-dev.1",
-    "@typexs/distributed-storage-ng": "12.3.0-dev.1",
-    "@typexs/tasks-ng": "12.3.0-dev.1"
+    "@typexs/base": "^2.3.0-dev.0",
+    "@typexs/base-ng": "^13.0.0",
+    "@typexs/storage-ng": "^13.0.0",
+    "@typexs/search-ng": "^13.0.0",
+    "@typexs/storage": "^2.3.0",
+    "@typexs/forms-ng": "^13.0.0",
+    "@typexs/forms": "^2.3.0",
+    "@typexs/entity": "^2.3.0",
+    "@typexs/entity-ng": "^13.0.0",
+    "@typexs/distributed-storage-ng": "^13.0.0",
+    "@typexs/tasks-ng": "^13.0.0"
   },
   "dependencies": {},
   "private": true
