--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -30,15 +30,16 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@allgemein/base": "~1.6.14",
-    "@allgemein/config": "~1.1.6",
-    "@allgemein/eventbus": "~0.14.2",
-    "@allgemein/expressions": "~1.1.0",
+    "@allgemein/base": "~1.8.1",
+    "@allgemein/config": "~1.3.1",
+    "@allgemein/eventbus": "~0.16.1",
+    "@allgemein/expressions": "~1.2.1",
     "@allgemein/mango-expressions": "~1.1.1",
-    "@allgemein/moduls": "~1.6.7",
-    "@allgemein/schema-api": "~1.5.34",
+    "@allgemein/moduls": "~1.7.1",
+    "@allgemein/schema-api": "~1.6.1",
     "@cezaryrk/minimatch": "~3.0.4",
-    "ajv": "^8.6.2",
+    "ajv": "^8.17.1",
+    "glob": "^11.0.0",
     "fast-safe-stringify": "2.1.1",
     "js-yaml": "4.1.0",
     "lodash": "^4.17.21",
@@ -77,7 +78,7 @@
     "name": "base"
   },
   "publishConfig": {
-    "tag": "v2.3"
+    "tag": "v2.4"
   },
   "gitHead": "fa0ea8d60470bb9f72960742a07891628b66f0c1"
 }
