build: update versions
 - @typexs/auth-ng@13.1.0
 - @typexs/auth@2.4.0
 - @typexs/base-ng@13.1.0
 - @typexs/base@2.4.0
 - @typexs/distributed-storage-ng@13.1.0
 - @typexs/distributed-storage@2.4.0
 - @typexs/entity-ng@13.1.0
 - @typexs/entity@2.4.0
 - @typexs/forms-ng@13.1.0
 - @typexs/forms@2.4.0
 - @typexs/generic@2.4.0
 - @typexs/ldap@2.4.0
 - @typexs/ng-admin-ui@13.1.0
 - @typexs/ng-theme-base@13.1.0
 - @typexs/ng@13.1.0
 - @typexs/notification@2.4.0
 - @typexs/pipelines@2.4.0
 - @typexs/roles-api@2.4.0
 - @typexs/roles@2.4.0
 - @typexs/search-ng@13.1.0
 - @typexs/search@2.4.0
 - @typexs/server@2.4.0
 - @typexs/storage-ng@13.1.0
 - @typexs/storage@2.4.0
 - @typexs/tasks-ng@13.1.0
 - @typexs/testing@2.4.0

--- a/packages/base/src/package.json
+++ b/packages/base/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/base",
-  "version": "2.3.9",
+  "version": "2.4.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -37,11 +37,11 @@
     "@allgemein/mango-expressions": "~1.1.1",
     "@allgemein/moduls": "~1.7.1",
     "@allgemein/schema-api": "~1.6.1",
-    "@typexs/generic": "2.3.0",
     "@cezaryrk/minimatch": "~3.0.4",
+    "@typexs/generic": "^2.4.0",
     "ajv": "^8.17.1",
-    "glob": "^11.0.0",
     "fast-safe-stringify": "2.1.1",
+    "glob": "^11.0.0",
     "js-yaml": "4.1.0",
     "lodash": "^4.17.21",
     "luxon": "^3.2.1",
@@ -49,7 +49,7 @@
     "typedi": "0.8.0"
   },
   "devDependencies": {
-    "@typexs/testing": "^2.3.9",
+    "@typexs/testing": "^2.4.0",
     "typeorm": "0.2.34",
     "winston": "3.3.3",
     "yargonaut": "^1.1.4",
