--- a/packages/search/src/package.json
+++ b/packages/search/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/search",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -19,15 +19,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/entity": "^2.4.0",
-    "@typexs/pipelines": "^2.4.0",
-    "@typexs/roles-api": "^2.4.0"
+    "@typexs/base": "^3.0.0",
+    "@typexs/entity": "^3.0.0",
+    "@typexs/pipelines": "^3.0.0",
+    "@typexs/roles-api": "^3.0.0"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.15.0",
-    "@typexs/server": "^2.4.0",
-    "@typexs/storage": "^2.4.0"
+    "@typexs/server": "^3.0.0",
+    "@typexs/storage": "^3.0.0"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.15.0"
@@ -45,7 +45,7 @@
     ]
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
