--- a/packages/auth/src/package.json
+++ b/packages/auth/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/auth",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Auth module for typexs",
   "main": "index",
   "browser": "browser",
@@ -24,17 +24,17 @@
     "auth"
   ],
   "dependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/entity": "^2.4.0",
-    "@typexs/forms": "^2.4.0",
-    "@typexs/roles": "^2.4.0",
-    "@typexs/roles-api": "^2.4.0",
+    "@typexs/base": "^3.0.0",
+    "@typexs/entity": "^3.0.0",
+    "@typexs/forms": "^3.0.0",
+    "@typexs/roles": "^3.0.0",
+    "@typexs/roles-api": "^3.0.0",
     "bcrypt": "^5.0.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@typexs/server": "^2.4.0",
-    "@typexs/testing": "^2.4.0"
+    "@typexs/server": "^3.0.0",
+    "@typexs/testing": "^3.0.0"
   },
   "peerDependencies": {
     "@typexs/server": ">=2.3.0"
@@ -59,7 +59,7 @@
     ]
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
