--- a/packages/distributed-storage/src/package.json
+++ b/packages/distributed-storage/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/distributed-storage",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -27,13 +27,13 @@
   "author": "Robert Kania",
   "license": "MIT",
   "dependencies": {
-    "@typexs/roles-api": "^2.4.0"
+    "@typexs/roles-api": "^3.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/pipelines": "^2.4.0",
-    "@typexs/server": "^2.4.0",
-    "@typexs/testing": "^2.4.0"
+    "@typexs/base": "^3.0.0",
+    "@typexs/pipelines": "^3.0.0",
+    "@typexs/server": "^3.0.0",
+    "@typexs/testing": "^3.0.0"
   },
   "peerDependencies": {
     "@typexs/base": ">=2.3.0",
@@ -44,7 +44,7 @@
     "name": "distributed-storage"
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
