--- a/packages/entity/src/package.json
+++ b/packages/entity/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/entity",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Schema for typexs",
   "main": "index",
   "browser": "browser",
@@ -33,15 +33,15 @@
   },
   "homepage": "https://gitlab.com/typexs/entity",
   "dependencies": {
-    "@typexs/roles-api": "^2.4.0"
+    "@typexs/roles-api": "^3.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/forms": "^2.4.0",
-    "@typexs/pipelines": "^2.4.0",
-    "@typexs/server": "^2.4.0",
-    "@typexs/storage": "^2.4.0",
-    "@typexs/testing": "^2.4.0"
+    "@typexs/base": "^3.0.0",
+    "@typexs/forms": "^3.0.0",
+    "@typexs/pipelines": "^3.0.0",
+    "@typexs/server": "^3.0.0",
+    "@typexs/storage": "^3.0.0",
+    "@typexs/testing": "^3.0.0"
   },
   "peerDependencies": {
     "@typexs/base": ">=2.3.0",
@@ -54,7 +54,7 @@
     "name": "typexs-entity"
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
