--- a/packages/generic/src/package.json
+++ b/packages/generic/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/generic",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Forms for typexs",
   "main": "index",
   "browser": "browser",
@@ -40,7 +40,7 @@
     "name": "generic"
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
