--- a/packages/notification/src/package.json
+++ b/packages/notification/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/notification",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "main": "index",
   "browser": "browser",
   "typexs": {
@@ -19,7 +19,7 @@
     "test": "../test"
   },
   "devDependencies": {
-    "@typexs/base": "^2.4.0",
+    "@typexs/base": "^3.0.0",
     "winston-transport": "^4.4.0"
   },
   "peerDependencies": {
@@ -27,7 +27,7 @@
     "winston-transport": "^4.4.0"
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
