--- a/packages/roles/src/package.json
+++ b/packages/roles/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -24,13 +24,13 @@
   "license": "MIT",
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "^2.4.0",
+    "@typexs/roles-api": "^3.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/entity": "^2.4.0",
-    "@typexs/testing": "^2.4.0"
+    "@typexs/base": "^3.0.0",
+    "@typexs/entity": "^3.0.0",
+    "@typexs/testing": "^3.0.0"
   },
   "peerDependencies": {
     "@typexs/base": ">=2.3.0",
@@ -40,7 +40,7 @@
     "name": "roles"
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
