--- a/packages/server/src/package.json
+++ b/packages/server/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/server",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Servers for typexs",
   "main": "index",
   "browser": "browser",
@@ -34,11 +34,11 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
-    "@typexs/roles-api": "^2.4.0"
+    "@typexs/roles-api": "^3.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/testing": "^2.4.0",
+    "@typexs/base": "^3.0.0",
+    "@typexs/testing": "^3.0.0",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "routing-controllers": "0.9.0"
@@ -70,7 +70,7 @@
     ]
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
