--- a/packages/tasks/src/package.json
+++ b/packages/tasks/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/tasks",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Tasks for typexs",
   "main": "index",
   "browser": "browser",
@@ -35,10 +35,10 @@
     "@allgemein/queue": "^1.1.1"
   },
   "devDependencies": {
-    "@typexs/base": "^2.4.0",
-    "@typexs/testing": "^2.4.0",
-    "@typexs/server": "^2.4.0",
-    "@typexs/generic": "^2.4.0"
+    "@typexs/base": "^3.0.0",
+    "@typexs/testing": "^3.0.0",
+    "@typexs/server": "^3.0.0",
+    "@typexs/generic": "^3.0.0"
   },
   "peerDependencies": {
     "@typexs/base": ">=2.4.0",
@@ -60,7 +60,7 @@
     ]
   },
   "publishConfig": {
-    "tag": "v2.4"
+    "tag": "v3-lts"
   },
   "gitHead": "00d1140a17b92fc98d1a7914810478380c16ee35"
 }
