build: update versions
 - @typexs/auth-ng@13.1.1
 - @typexs/auth@3.0.1
 - @typexs/base-ng@13.1.1
 - @typexs/base@3.0.1
 - @typexs/distributed-storage-ng@13.1.1
 - @typexs/distributed-storage@3.0.1
 - @typexs/entity-ng@13.1.1
 - @typexs/entity@3.0.1
 - @typexs/forms-ng@13.1.1
 - @typexs/forms@3.0.1
 - @typexs/generic@3.0.1
 - @typexs/ldap@3.0.1
 - @typexs/ng-admin-ui@13.1.1
 - @typexs/ng-theme-base@13.1.1
 - @typexs/ng@13.1.1
 - @typexs/notification@3.0.1
 - @typexs/pipelines@3.0.1
 - @typexs/roles-api@3.0.1
 - @typexs/roles@3.0.1
 - @typexs/search-ng@13.1.1
 - @typexs/search@3.0.1
 - @typexs/server@3.0.1
 - @typexs/storage-ng@13.1.1
 - @typexs/storage@3.0.1
 - @typexs/tasks-ng@13.1.1
 - @typexs/tasks@3.0.1
 - @typexs/testing@3.0.1

--- a/packages/tasks/src/package.json
+++ b/packages/tasks/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/tasks",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Tasks for typexs",
   "main": "index",
   "browser": "browser",
@@ -35,10 +35,10 @@
     "@allgemein/queue": "^1.1.1"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.0",
-    "@typexs/testing": "^3.0.0",
-    "@typexs/server": "^3.0.0",
-    "@typexs/generic": "^3.0.0"
+    "@typexs/base": "^3.0.1",
+    "@typexs/generic": "^3.0.1",
+    "@typexs/server": "^3.0.1",
+    "@typexs/testing": "^3.0.1"
   },
   "peerDependencies": {
     "@typexs/base": ">=2.4.0",
