--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/typexs",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "main": "index.js",
   "browser": "browser.js",
   "scripts": {
@@ -35,28 +35,28 @@
   ],
   "devDependencies": {
     "@allgemein/http": "~1.4.1",
-    "@angular-devkit/build-angular": "v13-lts",
-    "@angular-devkit/core": "v13-lts",
-    "@angular-devkit/schematics": "v13-lts",
+    "@angular-devkit/build-angular": "v14-lts",
+    "@angular-devkit/core": "v14-lts",
+    "@angular-devkit/schematics": "v14-lts",
     "@angular-eslint/eslint-plugin": "~13.5.0",
     "@angular-eslint/eslint-plugin-template": "~13.5.0",
-    "@angular/animations": "v13-lts",
-    "@angular/cli": "v13-lts",
-    "@angular/common": "v13-lts",
-    "@angular/compiler": "v13-lts",
-    "@angular/compiler-cli": "v13-lts",
-    "@angular/core": "v13-lts",
-    "@angular/forms": "v13-lts",
-    "@angular/language-service": "v13-lts",
-    "@angular/platform-browser": "v13-lts",
-    "@angular/platform-browser-dynamic": "v13-lts",
-    "@angular/router": "v13-lts",
+    "@angular/animations": "v14-lts",
+    "@angular/cli": "v14-lts",
+    "@angular/common": "v14-lts",
+    "@angular/compiler": "v14-lts",
+    "@angular/compiler-cli": "v14-lts",
+    "@angular/core": "v14-lts",
+    "@angular/forms": "v14-lts",
+    "@angular/language-service": "v14-lts",
+    "@angular/platform-browser": "v14-lts",
+    "@angular/platform-browser-dynamic": "v14-lts",
+    "@angular/router": "v14-lts",
     "@antora/cli": "~3.1.9",
     "@antora/lunr-extension": "~1.0.0-alpha.8",
     "@antora/site-generator-default": "~3.1.9",
     "@cezaryrk/minimatch": "3.0.4",
     "@popperjs/core": "~2.11.8",
-    "@schematics/angular": "v13-lts",
+    "@schematics/angular": "v14-lts",
     "@testdeck/mocha": "0.3.3",
     "@types/bcrypt": "~5.0.0",
     "@types/brace-expansion": "~1.1.0",
@@ -71,8 +71,7 @@
     "@types/ldapjs": "~2.2.5",
     "@types/luxon": "~2.4.0",
     "@types/mocha": "~9.1.1",
-    "@types/node": "~18.0.6",
-    "@types/redis": "4.0.11",
+    "@types/node": "ts4.8",
     "@types/sha1": "~1.1.5",
     "@types/supertest": "~6.0.2",
     "@types/through2": "~2.0.41",
@@ -83,16 +82,13 @@
     "ag-grid-angular": "25.3.0",
     "ag-grid-community": "25.3.0",
     "animate.css": "4.1.1",
-    "asciidoctor-plantuml": "~1.5.0",
-    "body-parser": "1.19.0",
+    "body-parser": "1.20.3",
     "bootstrap": "^5.3.3",
     "chai": "4.5.0",
     "chai-spies": "1.1.0",
     "class-transformer": "0.3.1",
     "class-validator": "0.12.2",
     "clipboard": "2.0.11",
-    "codecov": "3.8.3",
-    "codelyzer": "6.0.2",
     "conventional-changelog-cli": "^5.0.0",
     "cron-parser": "4.9.0",
     "d3": "6.7.0",
@@ -111,21 +107,19 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "ldapjs": "~2.3.3",
     "lerna": "~8.1.8",
     "light-server": "2.9.1",
     "lodash": "4.17.21",
     "mocha": "10.7.0",
-    "mongodb": "3.6.9",
+    "mongodb": "4x",
     "mysql": "2.18.1",
-    "ng-packagr": "^13.3.1",
+    "ng-packagr": "^14.0.0",
     "nodemon": "~2.0.22",
     "nyc": "~17.1.0",
     "perfect-scrollbar": "1.5.1",
     "pg": "8.13.1",
     "prismjs": "1.29.0",
     "redis": "~4.7.0",
-    "routing-controllers": "0.9.0",
     "rxjs": "~7.5.0",
     "semver": "^7.6.3",
     "sha1": "1.1.1",
@@ -135,7 +129,7 @@
     "through": "2.3.8",
     "ts-node": "~10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~4.6.4",
+    "typescript": "~4.8.4",
     "zone.js": "~0.11.4"
   },
   "private": true,
