build: update packages

--- a/packages/server/src/package.json
+++ b/packages/server/src/package.json
@@ -34,20 +34,17 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "dependencies": {
+    "@typexs/base": "^3.0.0",
     "@typexs/roles-api": "^3.0.0"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.0",
-    "@typexs/testing": "^3.0.0",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
-    "routing-controllers": "0.10.4"
+    "@typexs/testing": "^3.0.0"
   },
   "peerDependencies": {
     "@typexs/base": ">=2.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "routing-controllers": "^0.10.4"
+    "routing-controllers": "0.10.4"
   },
   "typexs": {
     "name": "server",
