--- a/package.json
+++ b/package.json
@@ -120,6 +120,9 @@
     "pg": "8.13.1",
     "prismjs": "1.29.0",
     "redis": "~4.7.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "routing-controllers": "0.10.4",
     "rxjs": "~7.5.0",
     "semver": "^7.6.3",
     "sha1": "1.1.1",
