--- a/package.json
+++ b/package.json
@@ -86,8 +86,6 @@
     "bootstrap": "^5.3.3",
     "chai": "4.5.0",
     "chai-spies": "1.1.0",
-    "class-transformer": "0.3.1",
-    "class-validator": "0.12.2",
     "clipboard": "2.0.11",
     "conventional-changelog-cli": "^5.0.0",
     "cron-parser": "4.9.0",
@@ -111,7 +109,7 @@
     "light-server": "2.9.1",
     "lodash": "4.17.21",
     "mocha": "10.7.0",
-    "mongodb": "4x",
+    "mongodb": "3.7.4",
     "mysql": "2.18.1",
     "ng-packagr": "^14.0.0",
     "nodemon": "~2.0.22",
