--- a/packages/ng-router-menu/angular.json
+++ b/packages/ng-router-menu/angular.json
@@ -34,6 +34,9 @@
       }
     }
   },
-  "defaultProject": "ng-router-menu"
+  "defaultProject": "ng-router-menu",
+  "cli": {
+    "analytics": false
+  }
 
 }
