--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -25,92 +25,7 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
     "suppressImplicitAnyIndexErrors": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "baseUrl": "./",
-    "paths": {
-      "@typexs/base": [
-        "./packages/base/build/package/*",
-        "./packages/base/build/package"
-      ],
-      "@typexs/base/*": [
-        "./packages/base/build/package/*",
-        "./packages/base/build/package"
-      ],
-      "@typexs/base-ng": [
-        "./packages/base-ng/build/package/*",
-        "./packages/base-ng/build/package"
-      ],
-      "@typexs/base-ng/*": [
-        "./packages/base-ng/build/package/*",
-        "./packages/base-ng/build/package"
-      ],
-      "@typexs/entity-ng": [
-        "./packages/entity-ng/build/package/*",
-        "./packages/entity-ng/build/package"
-      ],
-      "@typexs/entity-ng/*": [
-        "./packages/entity-ng/build/package/*",
-        "./packages/entity-ng/build/package"
-      ],
-      "@typexs/auth-ng": [
-        "./packages/auth-ng/build/package/*",
-        "./packages/auth-ng/build/package"
-      ],
-      "@typexs/auth-ng/*": [
-        "./packages/auth-ng/build/package/*",
-        "./packages/auth-ng/build/package"
-      ],
-      "@typexs/forms-ng/*": [
-        "./packages/forms-ng/build/package/*",
-        "./packages/forms-ng/build/package"
-      ],
-      "@typexs/forms-ng": [
-        "./packages/forms-ng/build/package/*",
-        "./packages/forms-ng/build/package"
-      ],
-      "@typexs/storage-ng/*": [
-        "./packages/storage-ng/build/package/*",
-        "./packages/storage-ng/build/package"
-      ],
-      "@typexs/storage-ng": [
-        "./packages/storage-ng/build/package/*",
-        "./packages/storage-ng/build/package"
-      ],
-      "@typexs/ng-router-menu/*": [
-        "./packages/ng-router-menu/build/package/*",
-        "./packages/ng-router-menu/build/package"
-      ],
-      "@typexs/ng-router-menu": [
-        "./packages/ng-router-menu/build/package/*",
-        "./packages/ng-router-menu/build/package"
-      ],
-      "@typexs/ng-theme-base": [
-        "./packages/ng-theme-base/build/package/*",
-        "./packages/ng-theme-base/build/package"
-      ],
-      "@typexs/ng-theme-base/*": [
-        "./packages/ng-theme-base/build/package/*",
-        "./packages/ng-theme-base/build/package"
-      ],
-      "@typexs/tasks-ng": [
-        "./packages/tasks-ng/build/package/*",
-        "./packages/tasks-ng/build/package"
-      ],
-      "@typexs/tasks-ng/*": [
-        "./packages/tasks-ng/build/package/*",
-        "./packages/tasks-ng/build/package"
-      ]
-    }
+    "baseUrl": "./"
   },
-  "exclude": [
-    "archive",
-    "build",
-    "dist",
-    "tmp",
-    "src/**/files",
-    "node_modules"
-  ],
   "compileOnSave": true
 }
