--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean:modules": "npx lerna run clean:modules && rm node_modules -R",
     "clean:build": "npx lerna run clean:build",
     "test": "npx lerna run test --concurrency=1",
-    "build": "npm run clean:build && npx lerna run build",
+    "__build": "npm run clean:build && npx lerna run build --concurrency=1",
+    "build": "npm run clean:build && for i in `npx lerna list --toposort`; do npx lerna run build --scope=$i; done",
     "job:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && docker run --volume $PWD:/data -it pandoc/core -t asciidoc -f markdown CHANGELOG.md > docs/modules/ROOT/pages/changelog.adoc && git add CHANGELOG.md docs/modules/ROOT/pages/changelog.adoc",
     "packages:publish": "npx lerna publish from-package",
     "packages:version": "./scripts/version.sh",
@@ -106,7 +107,7 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "lerna": "~8.1.8",
     "light-server": "2.9.1",
-    "lodash": "4.17.21",
+    "lodash": "~4.17.21",
     "mocha": "10.7.0",
     "mongodb": "3.7.4",
     "mysql": "2.18.1",
