--- a/packages/distributed-storage-ng/src/package.json
+++ b/packages/distributed-storage-ng/src/package.json
@@ -3,7 +3,7 @@
   "name": "@typexs/distributed-storage-ng",
   "version": "14.0.0",
   "description": "Angular for typexs",
-  "main": "public_api.ts",
+  "main": "public_api",
   "scripts": {
     "clean": "npm run clean:build && npm run clean:modules",
     "clean:build": "rm -rf ../build",
@@ -33,9 +33,14 @@
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
     "@typexs/base-ng": ">=14.0.0",
-    "@typexs/distributed-storage": ">=2.3.0",
+    "@typexs/distributed-storage": ">=3.0.0",
     "@typexs/forms-ng": ">=14.0.0",
-    "@typexs/ng": ">=14.0.0"
+    "@typexs/ng": ">=14.0.0",
+    "@typexs/storage-ng": ">=14.0.0"
+  },
+  "dependencies": {
+    "@typexs/base-ng": "^14.0.0",
+    "@typexs/ng-theme-base": "^14.0.0"
   },
   "devDependencies": {
     "@angular/common": "v14-lts",
