--- a/packages/roles/src/package.json
+++ b/packages/roles/src/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
     "@typexs/roles-api": "^3.0.0",
-    "lodash": "^4.17.21"
+    "@typexs/generic": "^3.0.0"
   },
   "devDependencies": {
     "@typexs/base": "^3.0.0",
@@ -33,8 +33,8 @@
     "@typexs/testing": "^3.0.0"
   },
   "peerDependencies": {
-    "@typexs/base": ">=2.3.0",
-    "@typexs/entity": ">=2.3.0"
+    "@typexs/base": ">=3.0.0",
+    "@typexs/entity": ">=3.0.0"
   },
   "typexs": {
     "name": "roles"
