--- a/packages/tasks-ng/src/package.json
+++ b/packages/tasks-ng/src/package.json
@@ -3,7 +3,7 @@
   "name": "@typexs/tasks-ng",
   "version": "14.0.0",
   "description": "Angular for typexs",
-  "main": "public_api.ts",
+  "main": "public_api",
   "scripts": {
     "clean": "npm run clean:build && npm run clean:modules",
     "clean:build": "rm -rf ../build",
@@ -24,11 +24,15 @@
     "typexs"
   ],
   "peerDependencies": {
-    "@typexs/base": ">=2.3.0",
+    "@typexs/base": ">=3.0.0",
     "@typexs/base-ng": ">=14.0.0",
     "@typexs/forms-ng": ">=14.0.0",
-    "@typexs/server": ">=2.3.0",
-    "@typexs/tasks": ">=2.3.0"
+    "@typexs/server": ">=3.0.0",
+    "@typexs/storage-ng": ">=14.0.0",
+    "@typexs/tasks": ">=3.0.0"
+  },
+  "dependencies": {
+    "@typexs/base-ng": ">=14.0.0"
   },
   "devDependencies": {
     "@angular/common": "v14-lts",
