--- a/packages/app/tsconfig.app.json
+++ b/packages/app/tsconfig.app.json
@@ -1,141 +1,15 @@
 {
-  "extends": "./../../tsconfig.json",
+  "extends": "./../../tsconfig.ng.paths",
   "compilerOptions": {
     "outDir": "build/app",
     "sourceMap": true,
     "types": [
       "node"
-    ],
-    "paths": {
-      "@typexs/base": [
-        "./packages/base/src/browser"
-      ],
-      "@typexs/base/*": [
-        "./packages/base/src/*"
-      ],
-      "@typexs/base-ng/*": [
-        "./packages/base-ng/src/*"
-      ],
-      "@typexs/base-ng": [
-        "./packages/base-ng/src/public_api"
-      ],
-      "@typexs/storage": [
-        "./packages/storage/src/browser"
-      ],
-      "@typexs/storage/*": [
-        "./packages/storage/src/*"
-      ],
-      "@typexs/storage-ng/*": [
-        "./packages/storage-ng/src/*"
-      ],
-      "@typexs/storage-ng": [
-        "./packages/storage-ng/src/public_api"
-      ],
-      "@typexs/auth": [
-        "./packages/auth/src/browser"
-      ],
-      "@typexs/auth/*": [
-        "./packages/auth/src/*"
-      ],
-      "@typexs/server": [
-        "./packages/server/src/browser"
-      ],
-      "@typexs/server/*": [
-        "./packages/server/src/*"
-      ],
-      "@typexs/entity": [
-        "./packages/entity/src/browser"
-      ],
-      "@typexs/entity/*": [
-        "./packages/entity/src/*"
-      ],
-      "@typexs/entity-ng/*": [
-        "./packages/entity-ng/src/*"
-      ],
-      "@typexs/entity-ng": [
-        "./packages/entity-ng/src/public_api"
-      ],
-      "@typexs/ng": [
-        "./packages/ng/src/browser"
-      ],
-      "@typexs/ng/*": [
-        "./packages/ng/src/*"
-      ],
-      "@typexs/roles": [
-        "./packages/roles/src/browser"
-      ],
-      "@typexs/roles/*": [
-        "./packages/roles/src/*"
-      ],
-      "@typexs/search/*": [
-        "./packages/search/src/*"
-      ],
-      "@typexs/search": [
-        "./packages/search/src/browser"
-      ],
-      "@typexs/search-ng/*": [
-        "./packages/search-ng/src/*"
-      ],
-      "@typexs/search-ng": [
-        "./packages/search-ng/src/public_api"
-      ],
-      "@typexs/ng-router-menu/*": [
-        "./packages/ng-router-menu/src/*"
-      ],
-      "@typexs/ng-router-menu": [
-        "./packages/ng-router-menu/src/public_api"
-      ],
-      "@typexs/ng-admin-ui/*": [
-        "./packages/ng-admin-ui/src/*"
-      ],
-      "@typexs/ng-admin-ui": [
-        "./packages/ng-admin-ui/src/public_api"
-      ],
-      "@typexs/ng-theme-base/*": [
-        "./packages/ng-theme-base/src/*"
-      ],
-      "@typexs/ng-theme-base": [
-        "./packages/ng-theme-base/src/public_api"
-      ],
-      "@typexs/forms/*": [
-        "./packages/forms/src/*"
-      ],
-      "@typexs/forms": [
-        "./packages/forms/src/browser"
-      ],
-      "@typexs/forms-ng/*": [
-        "./packages/forms-ng/src/*"
-      ],
-      "@typexs/forms-ng": [
-        "./packages/forms-ng/src/public_api"
-      ],
-      "@typexs/tasks-ng/*": [
-        "./packages/tasks-ng/src/*"
-      ],
-      "@typexs/tasks-ng": [
-        "./packages/tasks-ng/src/public_api"
-      ],
-      "@typexs/distributed-storage": [
-        "./packages/distributed-storage/src/browser"
-      ],
-      "@typexs/distributed-storage/*": [
-        "./packages/distributed-storage/src/*"
-      ],
-      "@typexs/distributed-storage-ng": [
-        "./packages/distributed-storage-ng/src/public_api"
-      ],
-      "@typexs/distributed-storage-ng/*": [
-        "./packages/distributed-storage-ng/src/*"
-      ]
-    }
+    ]
   },
   "include": [
     "src/polyfills.ts",
-    "src/main.ts",
-//    "src/dummy.ts"
-  ],
-  "exclude": [
-    "node_modules/@typexs"
+    "src/main.ts"
   ],
   "angularCompilerOptions": {
     "genDir": "build/app-aot",
