--- a/packages/forms-ng/src/package.json
+++ b/packages/forms-ng/src/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
+    "@angular/common": "v14-lts",
     "@angular/core": "v14-lts",
     "@angular/forms": "v14-lts",
     "@angular/router": "v14-lts",
@@ -39,14 +40,9 @@
     "@typexs/forms": ">=3.0.0"
   },
   "devDependencies": {
-    "@angular/common": "v14-lts",
-    "@angular/core": "v14-lts",
-    "@angular/forms": "v14-lts",
-    "@angular/router": "v14-lts",
-    "@typexs/base": "^3.0.0",
+    "@typexs/base": "^3.0.1",
     "@typexs/base-ng": "^14.0.0",
-    "@typexs/forms": "^3.0.0",
-    "rxjs": "~7.5.0"
+    "@typexs/forms": "^3.0.1"
   },
   "publishConfig": {
     "tag": "v14-lts"
