--- a/packages/search-ng/src/package.json
+++ b/packages/search-ng/src/package.json
@@ -24,6 +24,10 @@
     "typexs"
   ],
   "peerDependencies": {
+    "@angular/common": "v14-lts",
+    "@angular/core": "v14-lts",
+    "@angular/forms": "v14-lts",
+    "@angular/router": "v14-lts",
     "@typexs/base-ng": ">=14.0.0",
     "@typexs/forms-ng": ">=14.0.0",
     "@typexs/ng-theme-base": ">=14.0.0",
@@ -35,16 +39,11 @@
     "@typexs/ng-theme-base": ">=14.0.0"
   },
   "devDependencies": {
-    "@angular/common": "v14-lts",
-    "@angular/core": "v14-lts",
-    "@angular/forms": "v14-lts",
-    "@angular/router": "v14-lts",
     "@typexs/base-ng": "^14.0.0",
     "@typexs/forms-ng": "^14.0.0",
-    "@typexs/search": "^3.0.0",
+    "@typexs/search": "^3.0.1",
     "@typexs/storage-ng": "^14.0.0",
-    "@typexs/ng-theme-base": ">=14.0.0",
-    "rxjs": "~7.5.0"
+    "@typexs/ng-theme-base": ">=14.0.0"
   },
   "publishConfig": {
     "tag": "v14-lts"
