--- a/packages/auth-ng/src/package.json
+++ b/packages/auth-ng/src/package.json
@@ -32,6 +32,10 @@
   },
   "homepage": "https://gitlab.com/typexs/typexs#readme",
   "peerDependencies": {
+    "@angular/common": "v14-lts",
+    "@angular/core": "v14-lts",
+    "@angular/forms": "v14-lts",
+    "@angular/router": "v14-lts",
     "@typexs/auth": ">=3.0.0",
     "@typexs/base-ng": ">=14.0.0",
     "@typexs/entity-ng": ">=14.0.0",
@@ -46,20 +50,15 @@
     "@typexs/ng-theme-base": "^14.0.0"
   },
   "devDependencies": {
-    "@angular/common": "v14-lts",
-    "@angular/core": "v14-lts",
-    "@angular/forms": "v14-lts",
-    "@angular/router": "v14-lts",
-    "@typexs/auth": "^3.0.0",
+    "@typexs/auth": "^3.0.1",
     "@typexs/base-ng": "^14.0.0",
     "@typexs/entity-ng": "^14.0.0",
     "@typexs/forms-ng": "^14.0.0",
     "@typexs/ng": "^14.0.0",
     "@typexs/ng-theme-base": "^14.0.0",
-    "@typexs/roles": "^3.0.0",
-    "@typexs/roles-api": "^3.0.0",
-    "@typexs/server": "^3.0.0",
-    "rxjs": "~7.5.0"
+    "@typexs/roles": "^3.0.1",
+    "@typexs/roles-api": "^3.0.1",
+    "@typexs/server": "^3.0.1"
   },
   "publishConfig": {
     "tag": "v14-lts"
