--- a/packages/entity-ng/src/package.json
+++ b/packages/entity-ng/src/package.json
@@ -32,6 +32,10 @@
   },
   "homepage": "https://gitlab.com/typexs/ng#readme",
   "peerDependencies": {
+    "@angular/common": "v14-lts",
+    "@angular/core": "v14-lts",
+    "@angular/forms": "v14-lts",
+    "@angular/router": "v14-lts",
     "@typexs/base": ">=3.0.0",
     "@typexs/base-ng": ">=14.0.0",
     "@typexs/entity": ">=3.0.0",
@@ -44,17 +48,12 @@
     "@typexs/ng-theme-base": "^14.0.0"
   },
   "devDependencies": {
-    "@angular/common": "v14-lts",
-    "@angular/core": "v14-lts",
-    "@angular/forms": "v14-lts",
-    "@angular/router": "v14-lts",
-    "@typexs/base": "^3.0.0",
+    "@typexs/base": "^3.0.1",
     "@typexs/base-ng": "^14.0.0",
-    "@typexs/entity": "^3.0.0",
-    "@typexs/forms": "^3.0.0",
+    "@typexs/entity": "^3.0.1",
+    "@typexs/forms": "^3.0.1",
     "@typexs/forms-ng": "^14.0.0",
-    "@typexs/ng": "^14.0.0",
-    "rxjs": "~7.5.0"
+    "@typexs/ng": "^14.0.0"
   },
   "publishConfig": {
     "tag": "v14-lts"
