build: update versions
 - @typexs/auth-ng@14.0.1
 - @typexs/auth@3.0.2
 - @typexs/base-ng@14.0.1
 - @typexs/base@3.0.2
 - @typexs/distributed-storage-ng@14.0.1
 - @typexs/distributed-storage@3.0.2
 - @typexs/entity-ng@14.0.1
 - @typexs/entity@3.0.2
 - @typexs/forms-ng@14.0.1
 - @typexs/forms@3.0.2
 - @typexs/generic@3.0.2
 - @typexs/ldap@3.0.2
 - @typexs/ng-admin-ui@14.0.1
 - @typexs/ng-router-menu@14.0.1
 - @typexs/ng-theme-base@14.0.1
 - @typexs/ng@14.0.1
 - @typexs/notification@3.0.2
 - @typexs/pipelines@3.0.2
 - @typexs/roles@3.0.2
 - @typexs/search-ng@14.0.1
 - @typexs/search@3.0.2
 - @typexs/server@3.0.2
 - @typexs/storage-ng@14.0.1
 - @typexs/storage@3.0.2
 - @typexs/tasks-ng@14.0.1
 - @typexs/tasks@3.0.2
 - @typexs/testing@3.0.2

--- a/packages/roles/src/package.json
+++ b/packages/roles/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typexs/roles",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "",
   "main": "index",
   "browser": "browser",
@@ -24,13 +24,13 @@
   "license": "MIT",
   "dependencies": {
     "@cezaryrk/minimatch": "^3.0.4",
-    "@typexs/roles-api": "^3.0.1",
-    "@typexs/generic": "^3.0.1"
+    "@typexs/generic": "^3.0.2",
+    "@typexs/roles-api": "^3.0.1"
   },
   "devDependencies": {
-    "@typexs/base": "^3.0.1",
-    "@typexs/entity": "^3.0.1",
-    "@typexs/testing": "^3.0.1"
+    "@typexs/base": "^3.0.2",
+    "@typexs/entity": "^3.0.2",
+    "@typexs/testing": "^3.0.2"
   },
   "peerDependencies": {
     "@typexs/base": ">=3.0.0",
