--- a/packages/search-ng/src/package.json
+++ b/packages/search-ng/src/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../node_modules/ng-packagr/package.schema.json",
   "name": "@typexs/search-ng",
-  "version": "14.0.0",
+  "version": "14.0.1",
   "description": "Angular for typexs",
   "main": "public_api",
   "scripts": {
@@ -35,15 +35,15 @@
     "@typexs/storage-ng": ">=14.0.0"
   },
   "dependencies": {
-    "@typexs/base-ng": ">=14.0.0",
+    "@typexs/base-ng": "^14.0.1",
     "@typexs/ng-theme-base": ">=14.0.0"
   },
   "devDependencies": {
     "@typexs/base-ng": "^14.0.0",
-    "@typexs/forms-ng": "^14.0.0",
-    "@typexs/search": "^3.0.1",
-    "@typexs/storage-ng": "^14.0.0",
-    "@typexs/ng-theme-base": ">=14.0.0"
+    "@typexs/forms-ng": "^14.0.1",
+    "@typexs/ng-theme-base": ">=14.0.0",
+    "@typexs/search": "^3.0.2",
+    "@typexs/storage-ng": "^14.0.1"
   },
   "publishConfig": {
     "tag": "v14-lts"
