--- a/package.json
+++ b/package.json
@@ -36,28 +36,28 @@
   ],
   "devDependencies": {
     "@allgemein/http": "~1.4.1",
-    "@angular-devkit/build-angular": "v14-lts",
-    "@angular-devkit/core": "v14-lts",
-    "@angular-devkit/schematics": "v14-lts",
-    "@angular-eslint/eslint-plugin": "~13.5.0",
-    "@angular-eslint/eslint-plugin-template": "~13.5.0",
-    "@angular/animations": "v14-lts",
-    "@angular/cli": "v14-lts",
-    "@angular/common": "v14-lts",
-    "@angular/compiler": "v14-lts",
-    "@angular/compiler-cli": "v14-lts",
-    "@angular/core": "v14-lts",
-    "@angular/forms": "v14-lts",
-    "@angular/language-service": "v14-lts",
-    "@angular/platform-browser": "v14-lts",
-    "@angular/platform-browser-dynamic": "v14-lts",
-    "@angular/router": "v14-lts",
+    "@angular-devkit/build-angular": "v15-lts",
+    "@angular-devkit/core": "v15-lts",
+    "@angular-devkit/schematics": "v15-lts",
+    "@angular-eslint/eslint-plugin": "~15.2.1",
+    "@angular-eslint/eslint-plugin-template": "~15.2.1",
+    "@angular/animations": "v15-lts",
+    "@angular/cli": "v15-lts",
+    "@angular/common": "v15-lts",
+    "@angular/compiler": "v15-lts",
+    "@angular/compiler-cli": "v15-lts",
+    "@angular/core": "v15-lts",
+    "@angular/forms": "v15-lts",
+    "@angular/language-service": "v15-lts",
+    "@angular/platform-browser": "v15-lts",
+    "@angular/platform-browser-dynamic": "v15-lts",
+    "@angular/router": "v15-lts",
     "@antora/cli": "~3.1.9",
     "@antora/lunr-extension": "~1.0.0-alpha.8",
     "@antora/site-generator-default": "~3.1.9",
     "@cezaryrk/minimatch": "3.0.4",
     "@popperjs/core": "~2.11.8",
-    "@schematics/angular": "v14-lts",
+    "@schematics/angular": "v15-lts",
     "@testdeck/mocha": "0.3.3",
     "@types/bcrypt": "~5.0.0",
     "@types/brace-expansion": "~1.1.0",
@@ -71,14 +71,14 @@
     "@types/jasmine": "~5.1.5",
     "@types/luxon": "~2.4.0",
     "@types/mocha": "~9.1.1",
-    "@types/node": "ts4.8",
+    "@types/node": "ts4.9",
     "@types/sha1": "~1.1.5",
     "@types/supertest": "~6.0.2",
     "@types/through2": "~2.0.41",
     "@types/triple-beam": "~1.3.5",
     "@types/yargs": "~17.0.32",
-    "@typescript-eslint/eslint-plugin": "~8.0.1",
-    "@typescript-eslint/parser": "~8.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "ag-grid-angular": "25.3.0",
     "ag-grid-community": "25.3.0",
     "animate.css": "4.1.1",
@@ -106,12 +106,11 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "lerna": "~8.1.8",
-    "light-server": "2.9.1",
     "lodash": "~4.17.21",
-    "mocha": "10.7.0",
+    "mocha": "11.1.0",
     "mongodb": "3.7.4",
     "mysql": "2.18.1",
-    "ng-packagr": "^14.0.0",
+    "ng-packagr": "^15.0.0",
     "nodemon": "~2.0.22",
     "nyc": "~17.1.0",
     "perfect-scrollbar": "1.5.1",
@@ -129,7 +128,7 @@
     "through": "2.3.8",
     "ts-node": "~10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~4.8.4",
+    "typescript": "~4.9.5",
     "zone.js": "~0.11.4"
   },
   "private": true,
